# FlightGearEx3

./: BinaryOperator.h  CMakeLists.txt  Client.h  Command.h  ConstVars.h  Div.cpp  Div.h  Expression.h  Interpreter.cpp  Interpreter.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  Plus.cpp  Plus.h  README.md  Server.h  Singleton.h  UMinus.cpp  UMinus.h  UPlus.cpp  UPlus.h  UnariOperator.cpp  UnariOperator.h  Value.cpp  Value.h  VarToSim.h  Variable.cpp  Variable.h  Vars.h  ex1.cpp  ex1.h  globFunctions.cpp  globFunctions.h  main.cpp  toClient.h
